1-components/traefik/ingress-tmp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "kubedev-static"
spec:
  ingressClassName: traefik
  rules:
  - host: skusdev.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port: 
              number: 80
